--- a/css/12bool.css
+++ b/css/12bool.css
@@ -5,14 +5,9 @@
 }
 
 .container-fluid{
-    width: 100%;
+    width: 70%;
+    margin: auto;
 }
-
-.container {
-    /* è la versione mobile e lasciamo il container al 100% */
-    width: 100%;
-    margin: 0 auto;
-} 
 
 .row {
     display: flex;
@@ -22,6 +17,7 @@
 [class*="col-"] {
     flex: 0 0 auto;
 } 
+
   /* 12 System */
 .col-xs {
     flex-grow: 1;
@@ -78,67 +74,4 @@
     max-width: calc((100% / 12) * 12);
 }
 
-.col-xs-offset-1 {
-    margin-left: calc((100% / 12) * 1);
-}
-.col-xs-offset-2 {
-    margin-left: calc((100% / 12) * 2);
-}
-.col-xs-offset-3 {
-    margin-left: calc((100% / 12) * 3);
-}
-.col-xs-offset-4 {
-    margin-left: calc((100% / 12) * 4);
-}
-.col-xs-offset-5 {
-    margin-left: calc((100% / 12) * 5);
-}
-.col-xs-offset-6 {
-    margin-left: calc((100% / 12) * 6);
-}
-.col-xs-offset-7 {
-    margin-left: calc((100% / 12) * 7);
-}
-.col-xs-offset-8 {
-    margin-left: calc((100% / 12) * 8);
-}
-.col-xs-offset-9 {
-    margin-left: calc((100% / 12) * 9);
-}
-.col-xs-offset-10 {
-    margin-left: calc((100% / 12) * 10);
-}
-.col-xs-offset-11 {
-    margin-left: calc((100% / 12) * 11);
-}
 
-.start-xs {
-    justify-content: flex-start;
-}
-
-.center-xs{
-    justify-content: center;
-}
-
-.end-xs {
-    justify-content: flex-end;
-}
-
-.around-xs {
-    justify-content: space-around;
-}
-.between-xs {
-    justify-content: space-between;
-}
-
-.top-xs{
-    align-items: flex-start;
-}
-
-.middle-xs{
-    align-items: center;
-}
-
-.bottom-xs {
-    align-items: flex-end;
-}
