--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,17 @@
 .box{
-    min-height: 50px;
+    min-height: 150px;
     background-color: #FFC0CB;
     border: 1px solid black;
-    padding: 15px;
-    text-align: center;
+    padding: 5px;
     color: black;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .nested {
     background-color:#F07F80;
     border: 1px solid white;
-    min-height: 50px;
+    min-height: 145px;
 }
